2019-05-06  James Youngman  <jay@gnu.org>

	Switch test_delta-table.cc from mylist to vector.
	* unit-tests/test_delta-table.cc: Switch data structures from
	mylist<T> to std:vector<T> (for which mylist is an alias anyway).

2019-05-05  James Youngman  <jay@gnu.org>

	Switch class delta from using mylist<T> to vector<T>.
	* src/delta.h: Switch data structures from mylist<T> to
	std:vector<T> (for which mylist is an alias anyway).
	* src/delta.cc (delta_main): Likewise.
	* src/sf-delta.cc (add_delta): Likewise.

2019-05-05  Martin Wilck  <mwilck@suse.com>  (tiny change)

	sccs: comply with POSIX POS36-C rule.
	POS36-C compliance requires that setgid() is called before
	setuid(), and both called after relinquishing extra groups with
	setgroups(). See
	https://wiki.sei.cmu.edu/confluence/display/c/POS36-C.+Observe+correct+revocation+order+while+relinquishing+privileges
	* configure.ac: check for setgroups()
	* src/sccs.c (drop_privs): correct call order: setgroups, setgid,
	setuid.

2019-05-05  James Youngman  <jay@gnu.org>

	Suggest setting CSSC_DISABLE_VALGRIND=1 if system binaries cause
	tests to fail.
	* README (--disable-valgrind): point out that occasionally, a
	system binary will cause Valgrind checking to make tests
	fail. Explain how to work around this problem.

	Include config.h before other files.
	* build-aux/find-out-of-order-includes.sh: Script for identifying
	source files which include other headers before "config.h", which
	gnulib doesn't like.
	* src/version.cc: Include "config.h" before <stdio.h> to avoid
	complaints from gnulib.

2016-03-01  James Youngman  <jay@gnu.org>

	Don't distrubite unit-tests/googletest/Makefile.in.
	* unit-tests/Makefile.am (EXTRA_DIST): Don't include
	googletest/Makefile.in, since we don't create that file, as
	googletest is not in SUBDIRS.

2016-02-28  James Youngman  <jay@gnu.org>

	Add tests covering p-file validity checks in sact.
	* src/pfile.cc (sccs_pfile): Validate the delta SID (instead of